# scale

./: .travis.yml  CHANGELOG.md  README.md  scale.cabal
app/: Main.hs
data/: scales.yaml
src/: Scale.hs
