--
-- Cabal configuration for ‘scale’ package.
--
-- Copyright © 2017 Mark Karpov <markkarpov@openmailbox.org>
--
-- Redistribution and use in source and binary forms, with or without
-- modification, are permitted provided that the following conditions are
-- met:
--
-- * Redistributions of source code must retain the above copyright notice,
--   this list of conditions and the following disclaimer.
--
-- * Redistributions in binary form must reproduce the above copyright
--   notice, this list of conditions and the following disclaimer in the
--   documentation and/or other materials provided with the distribution.
--
-- * Neither the name Mark Karpov nor the names of contributors may be used
--   to endorse or promote products derived from this software without
--   specific prior written permission.
--
-- THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS “AS IS” AND ANY
-- EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
-- WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
-- DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDERS BE LIABLE FOR ANY
-- DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
-- DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS
-- OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
-- HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
-- STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN
-- ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
-- POSSIBILITY OF SUCH DAMAGE.

name:                 scale
version:              0.1.0
cabal-version:        >= 1.10
license:              BSD3
license-file:         LICENSE.md
author:               Mark Karpov <markkarpov@openmailbox.org>
maintainer:           Mark Karpov <markkarpov@openmailbox.org>
homepage:             https://github.com/mrkkrp/scale
bug-reports:          https://github.com/mrkkrp/scale/issues
category:             Music
synopsis:             Generate any transposition of any scale with interval annotations
build-type:           Simple
description:          Generate any transposition of any scale with interval annotations.
data-files:           data/scales.yaml
extra-doc-files:      CHANGELOG.md
                    , README.md

source-repository head
  type:               git
  location:           https://github.com/mrkkrp/scale.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  hs-source-dirs:     src
  build-depends:      aeson            >= 0.9    && < 1.2
                    , base             >= 4.9    && < 5.0
                    , case-insensitive >= 1.2.0.2 && < 1.3
                    , containers       >= 0.5.6.2 && < 0.6
                    , template-haskell >= 2.8    && < 2.12
                    , text             >= 0.2    && < 1.3
  exposed-modules:    Scale
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010

executable scale
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:      base             >= 4.9 && < 5.0
                    , case-insensitive >= 1.2.0.2 && < 1.3
                    , containers       >= 0.5.6.2 && < 0.6
                    , formatting       >= 6.2 && < 7.0
                    , optparse-applicative >= 0.11.0.2 && < 0.14
                    , scale
                    , template-haskell >= 2.8    && < 2.12
                    , yaml             >= 0.8.19 && < 0.9
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010

test-suite tests
  main-is:            Spec.hs
  hs-source-dirs:     tests
  type:               exitcode-stdio-1.0
  build-depends:      base             >= 4.9 && < 5.0
                    , hspec            >= 2.0 && < 3.0
                    , scale
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010
